--- a/src/views/perfil.handlebars
+++ b/src/views/perfil.handlebars
@@ -3,35 +3,26 @@
         <img src="https://picsum.photos/200/200" alt="{{user.first_name}}">
     </div>
     <div>
-        <h1>{{user.first_name}} {{user.last_name}} </h1>
-        <p>Email: {{user.email}}</p>
-        <p>Role: {{user.role}}</p>
+        <h1>{{first_name}} {{last_name}} </h1>
+        <p>Email: {{email}}</p>
+        <p>Role: {{role}}</p>
     </div>
     <div>
-        <p>mi carrito</p>
-        <ul>
-            {{#each cartProducts}}
-                <li>
-                    <h2>{{ this.product.title }}</h2>
-                    <p>Quantity: {{this.quantity}}</p>
-                </li>
-            {{/each}}
-        </ul>
-    </div>
-    <div>
-        <a href="/cart">Comprar</a>
-        <button class="emptyCartButton">Vaciar carrito</button>
+        <a href="/cart">Ir al carrito</a>
     </div>
 </div>
 
+<button id="logout-btn">Salir</button>
+
 <div class="profile">
     <ul>
-        {{#each product}}
+        {{#each products}}
             <li>
                 <h2>{{ this.title }}</h2>
                 <p>{{this.description}}</p>
                 <p>${{this.price}}</p>
                 <p>{{this.stock}}</p>
+                <p>Owner: {{this.owner}}</p>
                 <button class="agregar" id={{this._id}} >Agregar al carrito</button>
             </li>
         {{/each}}
@@ -39,3 +30,4 @@
 </div>
 
 <script src="js/perfil.js"></script>
+<script src="js/logout.js"></script>
