--- a/src/views/reset.handlebars
+++ b/src/views/reset.handlebars
@@ -12,4 +12,4 @@
     <button id="reset-password" type="submit">Cambiar contraseña</button>
 </form>
 </div>
-<script src="http://localhost:8080/js/reset.js"></script>
+<script src="https://entregafinalbackend-production-3d33.up.railway.app/js/reset.js"></script>
