--- a/src/views/adminManager.handlebars
+++ b/src/views/adminManager.handlebars
@@ -29,4 +29,8 @@
         </tbody>
     </table>
 </div>
+<div>
+    <button id="logout-btn">Salir</button>
+</div>
 
+<script src="js/logout.js"></script>
