--- a/src/views/current.handlebars
+++ b/src/views/current.handlebars
@@ -3,18 +3,24 @@
         <img src="https://picsum.photos/200/200" alt="{{user.first_name}}">
     </div>
     <div>
-        <h1>{{user.first_name}} {{user.last_name}} </h1>
-        <p>Email: {{user.email}}</p>
-        <p>Age: {{user.age}}</p>
-        <p>Role: {{user.role}}</p>
+        <h1>{{first_name}} {{last_name}} </h1>
+        <p>Email: {{email}}</p>
+        <p>Role: {{role}}</p>
+    </div>
+    <a href="/api/users/getPremium">
+        <button class="get-premium">Pasar a premium</button>
+    </a>
+    <div>
+        <a href="/perfil">Volver a la tienda</a>
     </div>
     <div>
         <p>mi carrito</p>
         <ul>
-            {{#each cartProducts}}
+            {{#each cartProduct}}
                 <li>
-                    <h2>{{ this.product.title }}</h2>
-                    <p>Quantity: {{this.quantity}}</p>
+                    <h2>{{ title }}</h2>
+                    <p>${{price}}</p>
+                    <p>Quantity: {{quantity}}</p>
                 </li>
             {{/each}}
         </ul>
