--- a/src/views/perfil.handlebars
+++ b/src/views/perfil.handlebars
@@ -8,11 +8,18 @@
         <p>Role: {{role}}</p>
     </div>
     <div>
+        <a href="/api/sessions/current">Ir a perfil</a>
+    </div>
+    <div>
         <a href="/cart">Ir al carrito</a>
     </div>
 </div>
 
 <button id="logout-btn">Salir</button>
+<a href="/addProduct">
+    <button class="addProduct-btn">Agregar Producto</button>
+</a>
+
 
 <div class="profile">
     <ul>
@@ -21,7 +28,7 @@
                 <h2>{{ this.title }}</h2>
                 <p>{{this.description}}</p>
                 <p>${{this.price}}</p>
-                <p>{{this.stock}}</p>
+                <p>Quedan {{this.stock}} </p>
                 <p>Owner: {{this.owner}}</p>
                 <button class="agregar" id={{this._id}} >Agregar al carrito</button>
             </li>
